<resources>
    <string name="app_name">Smart MCQ</string>
    <string name="general_quiz">General Quiz</string>
    <string name="take_a_test">Take a test</string>
    <string name="my_score">My Score</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="select_an_answer">SELECT AN ANSWER</string>
    <string name="description">DESCRIPTION</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="smart_quiz">Smart Quiz</string>
    <string name="submit">Submit</string>
    <string name="quiz_id">Quiz Id</string>
    <string name="reset">Reset</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="signup">Create New Account</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="birthdate">Birthdate</string>
    <string name="pincode">Pincode</string>
    <string name="progress">Progress</string>
    <string name="scorecard">Scorecard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title:</string>
    <string name="categoryid">CategoryID</string>
    <string name="passingscore">Passing score </string>
    <string name="my_quiz">My Quiz</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="quiz_title">Quiz title</string>
    <string name="timeout">Timeout</string>
    <string name="passing_score">Passing score (%)</string>
    <string name="quiz_description">Quiz description</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="media_link">Media link</string>
    <string name="details_of_answer">Details of answer</string>
    <string name="create_question">Create Question</string>
    <string name="update">Update</string>
    <string name="no_question_found_please_click_on_add_button_to_create_quiz">No question found. \n Please click on Add button to create quiz.</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="report_card">Report card</string>
    <string name="home">HOME</string>
    <string name="next_session">Next Session</string>
    <string name="view">View</string>
    <string name="upload">Upload</string>
    <string name="view_image">View Image</string>
    <string name="view_video">View video</string>
    <string name="preview">Preview</string>
    <string name="share">Share</string>

    <!--Testing-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="calibrate">Calibrate!</string>
    <string name="averageEyeDistance">Avg. Eye Distance</string>
    <string name="processTime">Process Time</string>
    <string name="currentDistance">Distance</string>
    <string name="confidence">Confidence</string>
    <string name="changeSize">Size</string>
    <string name="choose_cam_size">Choose Cam. Size</string>
    <string name="lastEyeDistance">Last eye dist.</string>
    <string name="changeAvgNum">Avg. Num.</string>
    <string name="measurementsLeft">Measurements left</string>
    <string name="finishAndSend">Send!</string>
    <string name="showMiddlePoint">Middle eye point</string>
    <string name="showEyePoints">Eye points</string>

    <!-- 	Start Page -->
    <string name="ProbantName">Probant Name:</string>
    <string name="CamResolution">Camera Resolution</string>
    <string name="AverageMeasurementNum">Avg. Meas. Num.</string>
    <string name="CalibrationDistance">Calibration Distance</string>
    <string name="StartMeasurement">Start Measurement</string>
    <string name="fillIn">Fill out !</string>

    <!-- 	Image desctriptions -->
    <string name="processedFrameDesctiption">Last processed frame</string>


</resources>
