<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_update"
        android:visibility="gone"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">


    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ivbackgroundimg"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginRight="@dimen/margin15"
        android:layout_marginBottom="@dimen/margin15"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:gravity="center_horizontal"
            android:text="@string/signup"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize20"
            android:textStyle="bold" />



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin10"
                android:background="#9e9e9e"
                android:elevation="@dimen/margin10"
                app:cardCornerRadius="@dimen/margin15"
                app:cardElevation="@dimen/margin10"
                app:cardPreventCornerOverlap="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin15"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etfirstnamelayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etfirstname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/firstname"
                                android:imeOptions="actionNext"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etlastnameinputlayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etlastname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/lastname"
                                android:imeOptions="actionNext"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etemailaddresslayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etemailaddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/email_address"
                                android:imeOptions="actionNext"
                                android:inputType="textEmailAddress" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etmobilelayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etmobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/mobile_number"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:maxLength="10" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etaddresslayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etaddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/address"
                                android:imeOptions="actionNext"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etcity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/city"
                                android:imeOptions="actionNext"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etstate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/state"
                                android:imeOptions="actionNext"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etcountry"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/country"
                                android:imeOptions="actionNext"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etpincodelayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etpincode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/pincode"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:maxLines="6" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etbirthdate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:editable="false"
                                android:hint="@string/birthdate" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin10"
                            android:id="@+id/etPasswordlayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin10"
                                android:hint="@string/password"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:maxLength="6" />
                        </com.google.android.material.textfield.TextInputLayout>



                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnsignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin10"
                            android:background="@color/colorPrimaryDark"
                            android:text="@string/signup"
                            android:textColor="@color/white" />


                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>