<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddQuizActivity">

    <include
        android:id="@+id/toolbar_createquiz"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin15">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_quiz_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quiz_title"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectangle_border"
            android:layout_marginTop="@dimen/margin10">

            <Spinner
                android:id="@+id/spin_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin10">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin5"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/timeout"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin5"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_passing_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passing_score"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin250"
            android:layout_marginTop="@dimen/margin10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_quiz_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/quiz_description"
                android:imeOptions="actionDone"
                android:scrollHorizontally="false"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength ="2000"
                android:gravity="start"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btncreatequiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:background="@color/colorPrimaryDark"
            android:text="@string/create_quiz"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>



</LinearLayout>