<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DashBoardActivity">


    <ImageView
        android:id="@+id/ivbackgroundimg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin250"
        android:background="@drawable/smartquizbg"
        android:scaleType="fitXY" />



    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ivbackgroundimg"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="@dimen/margin30"
        android:layout_marginBottom="@dimen/margin30"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/tv_title"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin10"
            android:textSize="@dimen/textsize15"
            android:gravity="center_horizontal" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin10"
            android:background="#9e9e9e"
            android:elevation="@dimen/margin10"
            app:cardCornerRadius="@dimen/margin15"
            app:cardElevation="@dimen/margin10"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin15"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMobileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_address"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnreset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin10"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/reset"
                        android:textColor="@color/white" />
                </LinearLayout>



            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</RelativeLayout>